--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
   "dependencies": {
     "@sentry/node": "^7.64.0",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "razorpay": "^2.9.1",
+    "stripe": "^13.2.0",
     "zod": "^3.21.4"
   }
 }
