--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/MetridashCore/Batman-backend#readme",
   "devDependencies": {
     "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.6",
