--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
     "start": "node dist/index.js",
     "test": "jest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MetridashCore/Batman-backend.git"
-  },
+  "repository": "MetridashCore/Batman-backend",
   "keywords": [],
   "author": "",
   "license": "ISC",
